Primera parte completa con menu

--- a/index.html
+++ b/index.html
@@ -4,24 +4,47 @@
 	<meta charset="UTF-8">
 	<title>Applove</title>
 	<!-- Importa la fuente del proyecto (Raleway) de Google Fonts (https://fonts.google.com) -->
-
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<!-- Enlaza tu CSS reutilizable aquí (common.css) -->
-
+	<link rel="stylesheet" type="text/CSS" href="css/common.css">
+	<link rel="stylesheet" type="text/CSS" href="css/main.css">
 	<!-- Enlaza tu CSS del proyecto aquí -->
 
-	<header>
-		<div class="menu container">
-			<a href="#" class="text-uppercase link"> Services </a>
-			<a href="#" class="text-uppercase link"> Work </a>
-			<a href="#" class="text-uppercase link"> The team </a>
-		</div>
-	</header>
-	
 </head>
 <body>
+
 	<!-- Escribe el HTML aquí -->
+	<header>
+		<nav class="container">
+			<a href="#" class="text-uppercase link col-1"> Services </a>
+			<a href="#" class="text-uppercase link col-1"> Work </a>
+			<a href="#" class="text-uppercase link col-2"> The Team </a>
+			<img src="assets/images/logo-r.png" class="logo col-7">
+			<a href="#" class="text-uppercase link col-2"> </a>
+		</nav>
+	</header>
+
+	<article>
+		<article id="home" class="col-12">
+        <section class="container">
+            <h2 class="col-12">YOU JUST FOUND AN UNTILMATE</h2>
+            <h1 class="text-uppercase text-home mb-0 col-12">we are applove from heart</h1>
+            <p class="text-uppercase mt-0 col-12">HANDCRAFTED - MODERN DESING - PIXEL PERFECT - PASSIONED DESING</p>
+            <p class="col-12 comodin"></p>
+            <div class="col-5"></div>
+            <a href="#services" class="btn-home col-2">View services</a>
+            <div class="col-5"></div>
+        </section>
+    </article>
+	</article>
+
+	<footer>
+
+
+	</footer>
 
 	<!-- Enlaza tu JS aquí -->
+	<script src="js/app.js"> </script>
 
 </body>
 </html>
